--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   },
   "dependencies": {
     "dotenv": "^4.0.0",
-    "firebase": "^3.7.4"
+    "express": "^4.15.2",
+    "firebase": "^3.7.4",
+    "gzippo": "^0.2.0",
+    "morgan": "^1.8.1"
   }
 }
