--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "newapp",
   "private": true,
+  "main": "web.js",
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
